<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_recepie_name_fragment"
            android:text="@string/tv_ingredients"
            android:layout_marginLeft="@dimen/layout_margin_small"
            android:layout_marginStart="@dimen/layout_margin_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_small" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorPrimaryDark"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_steps"
            android:layout_width="match_parent"
            android:layout_height="0dp"
             android:layout_weight="4"
            android:layout_marginLeft="@dimen/layout_margin_small"
             android:layout_marginStart="@dimen/layout_margin_small"/>
</LinearLayout>
