<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_dscrp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:contentDescription="@string/description_text"
        android:layout_marginLeft="@dimen/text_margin_small"
        tools:text="description" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/btn_previous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/layout_margin_small"
            android:layout_gravity="bottom"
            android:text="@string/previous" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_small"
            android:text="@string/next" />
    </LinearLayout>


</LinearLayout>